--- a/src/ProjectCard.css
+++ b/src/ProjectCard.css
@@ -19,7 +19,6 @@
     margin: 0;
     font-size: 24px;
     font-weight: bold;
-    color: white
   }
   
   .tags {
@@ -41,6 +40,10 @@
   margin-top: 10px;
   font-size: 16px;
   line-height: 1.5;
+}
+
+.project-title{
+  color: white
 }
   
   p {
